--- a/templates/app/apps.html
+++ b/templates/app/apps.html
@@ -5,9 +5,9 @@
 {% block page_title %}{% trans 'All apps' %}{% endblock %}
 
 {% block title_button %}
-<a class="btn btn-primary btn-sm" href="{% url 'app_new' %}">
-    {% translate 'New' %}
-    <i class="bi bi-plus"></i>
+<a class="btn btn-primary btn-sm rounded-pill" href="{% url 'app_new' %}">
+    {% translate 'New app' %}
+    <i class="bi bi-rocket-takeoff"></i>
 </a>
 {% endblock %}
 {% block content %}
