--- a/templates/header.html
+++ b/templates/header.html
@@ -2,6 +2,7 @@
 <div class="row g-3">
     <div class="col">
         <div class="row gx-3">
+            <a class="col-auto fw-bold" href="{% url 'apps' %}">DJpanel</a>
             <a class="col-auto" href="{% url 'apps' %}">{% trans 'Apps' %}</a>
             <a class="col-auto" href="">{% trans 'SSL' %}</a>
             <a class="col-auto" href="">{% trans 'Databases' %}</a>
