--- a/templates/postgres/new.html
+++ b/templates/postgres/new.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% load i18n %}
 
-{% block title %} {% translate 'Login' %} {% endblock %}
-{% block page_title %} {% translate 'Login' %} {% endblock %}
+{% block title %} {% translate 'New database' %} {% endblock %}
+{% block page_title %} {% translate 'New database' %} {% endblock %}
+{% block title_button %}
+{% endblock %}
 
 {% block content %}
 <div class="w-100">
@@ -11,14 +13,9 @@
         {% include 'inc/form.html'%}
         <div>
             <button type="submit" class="btn btn-primary mt-3">
-                {% translate 'Login' %}
+                {% translate 'Submit' %}
             </button>
         </div>
     </form>
 </div>
-<script>
-    jQuery('form').submit(function(e){
-        jQuery('.loading-preloader').show()
-    })
-</script>
 {% endblock %}
