--- a/templates/postgres/databases.html
+++ b/templates/postgres/databases.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block title %} {% translate 'Databases' %} {% endblock%}
-{% block page_title %}{% trans 'All databases' %}{% endblock %}
+{% block page_title %}{% trans 'All databases' %} <small class="fs-6">(Postgres)</small>{% endblock %}
 
 {% block title_button %}
 <a class="btn btn-primary btn-sm rounded-pill" href="{% url 'postgres_database_new' %}">
