--- a/templates/postgres/list.html
+++ b/templates/postgres/list.html
@@ -17,9 +17,13 @@
                 <tr>
                     <td>{{database.name}}</td>
                     <td>{{database.username}}</td>
-                    <td>{{database.password}}</td>
                     <td>
-                        <a href="" class="btn btn-success btn-sm rounded-pill">
+                        <div class="password-text">
+                            {{database.password}}
+                        </div>
+                    </td>
+                    <td class="text-end">
+                        <a href="{% url 'postgres_database_download' database.serial %}" target="_blank" class="btn btn-success btn-sm rounded-pill">
                             <i class="bi bi-download"></i>
                             {% trans 'Download' %}
                         </a>
