--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
 
 <div class="container">
     <div class="bg-white rounded shadow-sm p-3 my-4 ">
-        {% include 'header.html' %}
+        {% include 'inc/header.html' %}
     </div>
 </div>
 <div id="main-content" class="container">
@@ -57,7 +57,7 @@
 
     <div class="row mt-4">
         <div class="col-md text-center text-md-start mb-3">{% translate 'All rights reserved' %} &copy; DPanel  - {% now 'Y' %}</div>
-        <div class="col-md text-center text-md-end"><b>DPanel  3.1</b> With <i class="far fa-heart text-danger"></i> proud by Dever </div>
+        <div class="col-md text-center text-md-end"><b>DPanel  1.0</b> With <i class="far fa-heart text-danger"></i> proud by <a href="https://de-ver.com" class="fw-bold" target="_blank">Dever</a> </div>
     </div>
 </div>
 
