--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -3,10 +3,12 @@
     <div class="col">
         <div class="row gx-3">
             <a class="col-auto fw-bold" href="{% url 'apps' %}">DPanel</a>
+            {% if request.user.is_authenticated %}
             <a class="col-auto" href="{% url 'apps' %}">{% trans 'Apps' %}</a>
             <a class="col-auto" href="">{% trans 'SSL' %}</a>
             <a class="col-auto" href="{% url 'postgres_databases' %}">{% trans 'PostgreSQL' %}</a>
             <a class="col-auto" href="{% url 'mysql_databases' %}">{% trans 'MySQL' %}</a>
+            {% endif %}
             <div class="dropdown col-auto" title="{% trans 'Language' %}">
                     <div class="pointer" id="dropdownLanguage" data-bs-toggle="dropdown" aria-expanded="false">
                         <i class="bi bi-translate"></i>
