--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -36,20 +36,27 @@
             </td>
 
             <td>
-                <span class="btn btn-success btn-sm rounded-pill" onclick="open_link_confirm('{% url 'app_ssl_new' app.serial %}')">
-                    {% trans 'New ssl' %}
+                {% if app.certificate_app.all %}
+                    <span class="btn btn-success btn-sm rounded-pill" onclick="open_link_confirm('{% url 'app_ssl_new' app.serial %}')">
+                        {% trans 'Activated' %}
+                        <i class="bi bi-shield-fill"></i>
+                    </span>
+                {% else %}
+                <span class="btn btn-warning btn-sm rounded-pill" onclick="open_link_confirm('{% url 'app_ssl_new' app.serial %}')">
+                    {% trans 'Activate' %}
                     <i class="bi bi-shield"></i>
                 </span>
+                {% endif %}
             </td>
 
             <td class="text-end">
                 <span class="btn btn-danger btn-sm rounded-pill" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
-                    {% trans 'Delete' %}
+<!--                    {% trans 'Delete' %}-->
                     <i class="bi bi-trash"></i>
                 </span>
 
                 <a href="{% url 'app_config' app.serial %}" class="btn btn-secondary btn-sm rounded-pill">
-                    {% trans 'Config' %}
+<!--                    {% trans 'Config' %}-->
                     <i class="bi bi-gear-fill"></i>
                 </a>
             </td>
