--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/png" href="/static/images/favicon.png"/>
-    <title>{% block title%}{% endblock %}</title>
+    <title>DPanel - {% block title%}{% endblock %}</title>
 
     {% if LANGUAGE_BIDI == True %}
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.rtl.min.css' %}">
