--- a/templates/app/inc/user-form.html
+++ b/templates/app/inc/user-form.html
@@ -1,18 +1,24 @@
 {% load i18n %}
 <div class="app-user-form {{app.serial}} app-user-form-toggle position-fixed top-0 end-0 w-100 h-100 bg-dark opacity-50" style="display: none" data-app="{{app.serial}}"></div>
-<div class="app-user-form {{app.serial}} position-fixed top-50 start-50 translate-middle" style="display: none">
+<div class="app-user-form {{app.serial}} position-fixed mt-5 top-0 start-50 translate-middle-x" style="width: 400px;max-width: 100%;display: none">
     <div class="bg-white rounded p-3">
-        <form action="" method="post">
+        <div class="h4 mb-3">
+            {% trans 'Create user for' %} {{app.name}}
+        </div>
+        <form action="{% url 'app_user_new' app.serial %}" method="post">
             {% csrf_token %}
             <div class="input-group mb-3">
                 <span class="input-group-text"><i class="bi bi-person"></i></span>
-                <input type="text" name="username" class="form-control form-control-sm" placeholder="{% trans 'Username' %}">
+                <input type="text" name="username" class="form-control form-control-sm" placeholder="{% trans 'Username' %}" required>
+            </div>
+            <div class="input-group mb-3">
+                <span class="input-group-text"><i class="bi bi-envelope"></i></span>
+                <input type="email" name="email" class="form-control form-control-sm" placeholder="{% trans 'Email' %}" required>
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text"><i class="bi bi-shield"></i></span>
-                <input type="password" name="password" class="form-control form-control-sm" placeholder="{% trans 'Password' %}">
+                <input type="password" name="password" class="form-control form-control-sm" placeholder="{% trans 'Password' %}" required>
             </div>
-
             <label class="mb-3" title="{% trans 'Superuser' %}">
                 {% trans 'Superuser' %}
                 <input type="checkbox" name="superuser" class="form-check-input">
