--- a/templates/app/list.html
+++ b/templates/app/list.html
@@ -36,26 +36,27 @@
                     <input type="text" class="form-control form-control-sm copy-input" value="source {{app.venv_path}}/bin/activate && cd {{app.www_path}}" readonly dir="ltr">
                 </td>
                 <td>
-
                     <a href="{% url 'app_certificates' app.serial %}" class="btn btn-{% if app.certificate_app.all %}success{% else %}light border{% endif %} btn-sm rounded-pill">
                         <i class="bi bi-shield"></i>
                     </a>
                 </td>
-                <td class="text-end">
-                    <span class="btn btn-danger btn-sm rounded-pill" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
-                        <!--{% trans 'Delete' %}-->
-                        <i class="bi bi-trash"></i>
-                    </span>
+                <td>
+                    <div class="float-end d-flex">
+                        <span class="btn btn-danger btn-sm rounded-pill d-inline-flex me-1" onclick="open_link_confirm('{% url 'app_delete' app.serial %}')">
+    <!--                        {% trans 'Delete' %}-->
+                            <i class="bi bi-trash"></i>
+                        </span>
 
-                    <a href="{% url 'app_config' app.serial %}" class="btn btn-secondary btn-sm rounded-pill">
-                        <!--{% trans 'Config' %}-->
-                        <i class="bi bi-gear-fill"></i>
-                    </a>
+                        <a href="{% url 'app_config' app.serial %}" class="btn btn-secondary btn-sm rounded-pill d-inline-flex me-1">
+    <!--                        {% trans 'Config' %}-->
+                            <i class="bi bi-gear-fill"></i>
+                        </a>
 
-                    <span class="btn btn-light border btn-sm rounded-pill app-user-form-toggle" data-app="{{app.serial}}">
-                        {% trans 'Create user' %}
-                        <i class="bi bi-person"></i>
-                    </span>
+                        <span class="btn btn-light border btn-sm rounded-pill d-inline-flex me-1 app-user-form-toggle" data-app="{{app.serial}}">
+                            {% trans 'Create' %}
+                            <i class="bi bi-person"></i>
+                        </span>
+                    </div>
                 </td>
             </tr>
             {% include 'app/inc/user-form.html' %}
