--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/root.css' %}">
     <link rel="stylesheet" href="{% static 'bootstrap/font/bootstrap-icons.css' %}">
 
+    <link rel="stylesheet" href="{% static 'dropzone/dropzone.min.css' %}">
+    <script src="{% static 'dropzone/dropzone.min.js' %}"></script>
+
     <script src="{% static 'jquery.min.js' %}"></script>
     <link rel="stylesheet" href="{% static 'style.css' %}">
 
