--- a/templates/app/files.html
+++ b/templates/app/files.html
@@ -4,18 +4,21 @@
 {% block title %} {% translate 'Files' %} - {{app.name}} {% endblock %}
 {% block page_title %} {% translate 'Files' %} - {{app.name}} {% endblock %}
 {% block title_button %}
-    <button class="clickable-folder btn btn-light border" data-path="{{app.www_path}}/">
+    <button class="clickable-folder btn btn-light border" data-path="{{app.www_path}}">
         <i class="bi bi-house"></i>
     </button>
 {% endblock %}
 
 
 {% block content %}
-<div class="bg-white shadow-sm rounded p-3">
+<div class="bg-white shadow-sm rounded p-3 mb-3 position-relative">
     <div id="files">
         {% include 'app/inc/files-list.html' %}
     </div>
-        {% include 'app/inc/upload.html' %}
+    {% include 'inc/preloader2.html' %}
+</div>
+<div class="bg-white shadow-sm rounded p-3">
+    {% include 'app/inc/upload.html' %}
 </div>
 
 <script>
@@ -23,10 +26,53 @@
         jQuery.ajax({
              type: "GET",
              url: "{% url 'app_files_ajax' app.serial %}?path="+jQuery(this).attr('data-path'),
+             beforeSend: function(){
+                jQuery('.loading-preloader-2').show()
+             },
              success: function(data){
                 jQuery('#files').html(data)
+                jQuery('#upload-path').val(jQuery('#path').val())
+                jQuery('.loading-preloader-2').hide()
              }
         })
     })
+
+    jQuery('body').on('click', '.extract-zip', function(){
+        jQuery.ajax({
+             type: "GET",
+             url: "{% url 'app_zip_extract' %}?path="+jQuery('#path').val()+"&file="+jQuery(this).attr('data-file')+"&folder="+jQuery(this).attr('data-folder'),
+             beforeSend: function(){
+                jQuery('.loading-preloader-2').show()
+             },
+             success: function(data){
+                jQuery('.loading-preloader-2').hide()
+                reload_folder()
+             }
+        })
+    })
+
+    jQuery('body').on('click', '.remove-file', function(){
+        jQuery.ajax({
+             type: "GET",
+             url: "{% url 'app_file_remove' %}?file="+jQuery(this).attr('data-file'),
+             beforeSend: function(){
+                jQuery('.loading-preloader-2').show()
+             },
+             success: function(data){
+                reload_folder()
+             }
+        })
+    })
+
+    function reload_folder(){
+        jQuery.ajax({
+            type: "GET",
+            url: "{% url 'app_files_ajax' app.serial %}?path="+jQuery('#path').val(),
+            success: function(data){
+                jQuery('#files').html(data)
+                jQuery('#upload-path').val(jQuery('#path').val())
+            }
+        })
+    }
 </script>
 {% endblock %}
