--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/static/images/favicon.png"/>
+    <link rel="icon" type="image/png" href="/static/favicon.png"/>
     <title>DPanel - {% block title%}{% endblock %}</title>
 
     {% if LANGUAGE_BIDI == True %}
